--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@
             <p>專業投資分析工具，幫助您做出明智的投資決策</p>
             <div class="api-config">
                 <label for="api_url" style="font-size: 0.9em; margin-bottom: 5px; display: block;">API 端點:</label>
-                <input type="url" id="api_url" placeholder="請輸入您的 API URL (例如: http://localhost:5000)" value="http://localhost:5000">
+                <input type="url" id="api_url" placeholder="請輸入您的 API URL (例如: http://localhost:5000)" value="https://brainfin-flask-api-project-production.up.railway.app">
             </div>
         </div>
 
