--- a/index.html
+++ b/index.html
@@ -1,214 +1,215 @@
 <!DOCTYPE html>
 <html lang="zh-TW">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>投資模擬系統</title>
-  <link rel="stylesheet" href="style.css" />
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.9.1/chart.min.js"></script>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>投資模擬系統</title>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.9.1/chart.min.js"></script>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 <div class="container">
-  <div class="header">
-    <h1>🏦 投資模擬系統</h1>
-    <p>專業投資分析工具，幫助您做出明智的投資決策</p>
-    <div class="api-config">
-      <label for="api_url" style="font-size: 0.9em; margin-bottom: 5px; display: block;">API 端點:</label>
-      <input type="url" id="api_url" placeholder="請輸入您的 API URL (例如: http://localhost:8000)" value="http://localhost:8000">
-    </div>
-  </div>
-
-  <div class="main-content">
-    <div class="sidebar">
-      <h3 style="margin-bottom: 20px; color: #654321;">選擇投資類型</h3>
-
-      <div class="investment-type">
-        <button type="button" class="investment-btn active" data-type="real_estate">🏠 房地產投資</button>
-        <button type="button" class="investment-btn" data-type="etf">📈 ETF 定期定額</button>
-        <button type="button" class="investment-btn" data-type="stock">📊 股票投資</button>
-        <button type="button" class="investment-btn" data-type="fund">💰 基金投資</button>
-        <button type="button" class="investment-btn" data-type="bond">💎 美債/定存</button>
-      </div>
-
-      <!-- 房地產表單 -->
-      <form id="real_estate_form" class="investment-form">
-        <div class="form-section">
-          <h4>房屋資訊</h4>
-          <div class="form-group">
-            <label for="house_price">房屋總價 (TWD)</label>
-            <input type="number" id="house_price" name="house_price" value="10000000" required>
-          </div>
-          <div class="form-group">
-            <label for="down_payment">頭期款 (TWD)</label>
-            <input type="number" id="down_payment" name="down_payment" value="2000000" required>
-          </div>
-          <div class="form-group">
-            <label for="annual_cost">年持有成本 (TWD)</label>
-            <input type="number" id="annual_cost" name="annual_cost" value="200000" required>
-          </div>
+    <div class="header">
+        <h1>🏦 投資模擬系統</h1>
+        <p>專業投資分析工具，幫助您做出明智的投資決策</p>
+        <div class="api-config">
+            <label for="api_url" style="font-size: 0.9em; margin-bottom: 5px; display: block;">API 端點:</label>
+            <input type="url" id="api_url" placeholder="請輸入您的 API URL (例如: http://localhost:5000)" value="https://brainfin-flask-api-project-production.up.railway.app">
         </div>
-
-        <div class="form-section">
-          <h4>貸款條件</h4>
-          <div class="grid-2">
-            <div class="form-group">
-              <label for="loan_rate">貸款利率 (%)</label>
-              <input type="number" id="loan_rate" name="loan_rate" value="2.5" step="0.1" required>
-            </div>
-            <div class="form-group">
-              <label for="loan_years">貸款年限</label>
-              <input type="number" id="loan_years" name="loan_years" value="20" required>
-            </div>
-          </div>
-        </div>
-
-        <div class="form-section">
-          <h4>投資預期</h4>
-          <div class="grid-2">
-            <div class="form-group">
-              <label for="appreciation_rate">預期年漲幅 (%)</label>
-              <input type="number" id="appreciation_rate" name="appreciation_rate" value="3" step="0.1" required>
-            </div>
-            <div class="form-group">
-              <label for="simulation_years">持有年數</label>
-              <input type="number" id="simulation_years" name="simulation_years" value="10" required>
-            </div>
-          </div>
-        </div>
-
-        <button type="submit" class="submit-btn">開始模擬</button>
-      </form>
-
-      <!-- ETF表單 -->
-      <form id="etf_form" class="investment-form hidden">
-        <div class="form-section">
-          <h4>投資金額</h4>
-          <div class="form-group">
-            <label for="etf_initial_amount">初始投入 (TWD)</label>
-            <input type="number" id="etf_initial_amount" name="initial_amount" value="100000" required>
-          </div>
-          <div class="form-group">
-            <label for="etf_monthly_amount">每月定期投入 (TWD)</label>
-            <input type="number" id="etf_monthly_amount" name="monthly_amount" value="20000" required>
-          </div>
-        </div>
-
-        <div class="form-section">
-          <h4>投資條件</h4>
-          <div class="grid-2">
-            <div class="form-group">
-              <label for="etf_annual_return">預期年報酬率 (%)</label>
-              <input type="number" id="etf_annual_return" name="annual_return" value="8" step="0.1" required>
-            </div>
-            <div class="form-group">
-              <label for="etf_years">投資年限</label>
-              <input type="number" id="etf_years" name="years" value="10" required>
-            </div>
-          </div>
-        </div>
-
-        <button type="submit" class="submit-btn">開始模擬</button>
-      </form>
-
-      <!-- 股票表單 -->
-      <form id="stock_form" class="investment-form hidden">
-        <div class="form-section">
-          <h4>投資設定</h4>
-          <div class="form-group">
-            <label for="stock_monthly_amount">每月投入 (TWD)</label>
-            <input type="number" id="stock_monthly_amount" name="monthly_amount" value="20000" required>
-          </div>
-          <div class="grid-2">
-            <div class="form-group">
-              <label for="expected_return">預期年報酬率 (%)</label>
-              <input type="number" id="expected_return" name="expected_return" value="10" step="0.1" required>
-            </div>
-            <div class="form-group">
-              <label for="volatility">波動率 (%)</label>
-              <input type="number" id="volatility" name="volatility" value="20" step="0.1" required>
-            </div>
-          </div>
-          <div class="form-group">
-            <label for="stock_years">投資年限</label>
-            <input type="number" id="stock_years" name="years" value="10" required>
-          </div>
-        </div>
-
-        <button type="submit" class="submit-btn">開始模擬</button>
-      </form>
-
-      <!-- 基金表單 -->
-      <form id="fund_form" class="investment-form hidden">
-        <div class="form-section">
-          <h4>投資設定</h4>
-          <div class="form-group">
-            <label for="fund_initial_amount">初始投入 (TWD)</label>
-            <input type="number" id="fund_initial_amount" name="initial_amount" value="100000" required>
-          </div>
-          <div class="grid-2">
-            <div class="form-group">
-              <label for="fund_annual_return">預期年報酬率 (%)</label>
-              <input type="number" id="fund_annual_return" name="annual_return" value="6" step="0.1" required>
-            </div>
-            <div class="form-group">
-              <label for="fund_years">投資年限</label>
-              <input type="number" id="fund_years" name="years" value="10" required>
-            </div>
-          </div>
-        </div>
-
-        <button type="submit" class="submit-btn">開始模擬</button>
-      </form>
-
-      <!-- 債券表單 -->
-      <form id="bond_form" class="investment-form hidden">
-        <div class="form-section">
-          <h4>投資設定</h4>
-          <div class="form-group">
-            <label for="bond_principal">本金投資 (TWD)</label>
-            <input type="number" id="bond_principal" name="principal" value="1000000" required>
-          </div>
-          <div class="grid-2">
-            <div class="form-group">
-              <label for="bond_interest_rate">年利率 (%)</label>
-              <input type="number" id="bond_interest_rate" name="interest_rate" value="4" step="0.1" required>
-            </div>
-            <div class="form-group">
-              <label for="bond_years">投資年限</label>
-              <input type="number" id="bond_years" name="years" value="10" required>
-            </div>
-          </div>
-        </div>
-
-        <button type="submit" class="submit-btn">開始模擬</button>
-      </form>
     </div>
 
-    <div class="content">
-      <div id="results" class="results hidden">
-        <h3>投資模擬結果</h3>
-        <div id="result_items"></div>
-        <div class="chart-container">
-          <canvas id="investmentChart"></canvas>
+    <div class="main-content">
+        <div class="sidebar">
+            <h3 style="margin-bottom: 20px; color: #654321;">選擇投資類型</h3>
+
+            <div class="investment-type">
+                <button type="button" class="investment-btn active" data-type="real_estate">🏠 房地產投資</button>
+                <button type="button" class="investment-btn" data-type="etf">📈 ETF 定期定額</button>
+                <button type="button" class="investment-btn" data-type="stock">📊 股票投資</button>
+                <button type="button" class="investment-btn" data-type="fund">💰 基金投資</button>
+                <button type="button" class="investment-btn" data-type="bond">💎 美債/定存</button>
+            </div>
+
+            <!-- 房地產表單 -->
+            <form id="real_estate_form" class="investment-form">
+                <div class="form-section">
+                    <h4>房屋資訊</h4>
+                    <div class="form-group">
+                        <label for="house_price">房屋總價 (TWD)</label>
+                        <input type="number" id="house_price" name="house_price" value="10000000" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="down_payment">頭期款 (TWD)</label>
+                        <input type="number" id="down_payment" name="down_payment" value="2000000" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="annual_cost">年持有成本 (TWD)</label>
+                        <input type="number" id="annual_cost" name="annual_cost" value="200000" required>
+                    </div>
+                </div>
+
+                <div class="form-section">
+                    <h4>貸款條件</h4>
+                    <div class="grid-2">
+                        <div class="form-group">
+                            <label for="loan_rate">貸款利率 (%)</label>
+                            <input type="number" id="loan_rate" name="loan_rate" value="2.5" step="0.1" required>
+                        </div>
+                        <div class="form-group">
+                            <label for="loan_years">貸款年限</label>
+                            <input type="number" id="loan_years" name="loan_years" value="20" required>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="form-section">
+                    <h4>投資預期</h4>
+                    <div class="grid-2">
+                        <div class="form-group">
+                            <label for="appreciation_rate">預期年漲幅 (%)</label>
+                            <input type="number" id="appreciation_rate" name="appreciation_rate" value="3" step="0.1" required>
+                        </div>
+                        <div class="form-group">
+                            <label for="simulation_years">持有年數</label>
+                            <input type="number" id="simulation_years" name="simulation_years" value="10" required>
+                        </div>
+                    </div>
+                </div>
+
+                <button type="submit" class="submit-btn">開始模擬</button>
+            </form>
+
+            <!-- ETF表單 -->
+            <form id="etf_form" class="investment-form hidden">
+                <div class="form-section">
+                    <h4>投資金額</h4>
+                    <div class="form-group">
+                        <label for="etf_initial_amount">初始投入 (TWD)</label>
+                        <input type="number" id="etf_initial_amount" name="initial_amount" value="100000" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="etf_monthly_amount">每月定期投入 (TWD)</label>
+                        <input type="number" id="etf_monthly_amount" name="monthly_amount" value="20000" required>
+                    </div>
+                </div>
+
+                <div class="form-section">
+                    <h4>投資條件</h4>
+                    <div class="grid-2">
+                        <div class="form-group">
+                            <label for="etf_annual_return">預期年報酬率 (%)</label>
+                            <input type="number" id="etf_annual_return" name="annual_return" value="8" step="0.1" required>
+                        </div>
+                        <div class="form-group">
+                            <label for="etf_years">投資年限</label>
+                            <input type="number" id="etf_years" name="years" value="10" required>
+                        </div>
+                    </div>
+                </div>
+
+                <button type="submit" class="submit-btn">開始模擬</button>
+            </form>
+
+            <!-- 股票表單 -->
+            <form id="stock_form" class="investment-form hidden">
+                <div class="form-section">
+                    <h4>投資設定</h4>
+                    <div class="form-group">
+                        <label for="stock_monthly_amount">每月投入 (TWD)</label>
+                        <input type="number" id="stock_monthly_amount" name="monthly_amount" value="20000" required>
+                    </div>
+                    <div class="grid-2">
+                        <div class="form-group">
+                            <label for="expected_return">預期年報酬率 (%)</label>
+                            <input type="number" id="expected_return" name="expected_return" value="10" step="0.1" required>
+                        </div>
+                        <div class="form-group">
+                            <label for="volatility">波動率 (%)</label>
+                            <input type="number" id="volatility" name="volatility" value="20" step="0.1" required>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label for="stock_years">投資年限</label>
+                        <input type="number" id="stock_years" name="years" value="10" required>
+                    </div>
+                </div>
+
+                <button type="submit" class="submit-btn">開始模擬</button>
+            </form>
+
+            <!-- 基金表單 -->
+            <form id="fund_form" class="investment-form hidden">
+                <div class="form-section">
+                    <h4>投資設定</h4>
+                    <div class="form-group">
+                        <label for="fund_initial_amount">初始投入 (TWD)</label>
+                        <input type="number" id="fund_initial_amount" name="initial_amount" value="100000" required>
+                    </div>
+                    <div class="grid-2">
+                        <div class="form-group">
+                            <label for="fund_annual_return">預期年報酬率 (%)</label>
+                            <input type="number" id="fund_annual_return" name="annual_return" value="6" step="0.1" required>
+                        </div>
+                        <div class="form-group">
+                            <label for="fund_years">投資年限</label>
+                            <input type="number" id="fund_years" name="years" value="10" required>
+                        </div>
+                    </div>
+                </div>
+
+                <button type="submit" class="submit-btn">開始模擬</button>
+            </form>
+
+            <!-- 債券表單 -->
+            <form id="bond_form" class="investment-form hidden">
+                <div class="form-section">
+                    <h4>投資設定</h4>
+                    <div class="form-group">
+                        <label for="bond_principal">本金投資 (TWD)</label>
+                        <input type="number" id="bond_principal" name="principal" value="1000000" required>
+                    </div>
+                    <div class="grid-2">
+                        <div class="form-group">
+                            <label for="bond_interest_rate">年利率 (%)</label>
+                            <input type="number" id="bond_interest_rate" name="interest_rate" value="4" step="0.1" required>
+                        </div>
+                        <div class="form-group">
+                            <label for="bond_years">投資年限</label>
+                            <input type="number" id="bond_years" name="years" value="10" required>
+                        </div>
+                    </div>
+                </div>
+
+                <button type="submit" class="submit-btn">開始模擬</button>
+            </form>
         </div>
-      </div>
 
-      <div id="loading" class="loading hidden">
-        計算中，請稍候...
-      </div>
+        <div class="content">
+            <div id="results" class="results hidden">
+                <h3>投資模擬結果</h3>
+                <div id="result_items"></div>
+                <div class="chart-container">
+                    <canvas id="investmentChart"></canvas>
+                </div>
+            </div>
 
-      <div id="error" class="error hidden"></div>
+            <div id="loading" class="loading hidden">
+                計算中，請稍候...
+            </div>
 
-      <div id="success" class="success hidden"></div>
+            <div id="error" class="error hidden"></div>
 
-      <div class="history-section">
-        <h3 style="color: #654321; margin-bottom: 15px;">📚 最近的模擬記錄</h3>
-        <div id="history_list">
-          <p style="text-align: center; color: #666;">載入中...</p>
+            <div id="success" class="success hidden"></div>
+
+            <!-- 歷史記錄區域 -->
+            <div class="history-section">
+                <h3 style="color: #654321; margin-bottom: 15px;">📚 最近的模擬記錄</h3>
+                <div id="history_list">
+                    <p style="text-align: center; color: #666;">載入中...</p>
+                </div>
+            </div>
         </div>
-      </div>
     </div>
-  </div>
 </div>
 
 <script src="app.js"></script>
